Add tooltip to close button in ChromeOS search box

Use the same text as for a11y name.

Bug: 794441
Test: manual
Change-Id: Ifdbf19b20d2ded8071dd8187083af832c1357f22
Reviewed-on: https://chromium-review.googlesource.com/c/1460074
Commit-Queue: Vladislav Kaznacheev <kaznacheev@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Auto-Submit: Vladislav Kaznacheev <kaznacheev@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#630137}
Former-commit-id: 3efbeec4353b4539c44abbc5375ee726d3b641bc